tests/negative/gold/typed_assign_local_test.gold
tests/negative/typed_assign_local_test.toit:8:9: error: Type mismatch. Expected 'int'. Got 'string'
  local = "str"
        ^
As check failed: a string ("str") is not a int.
  0: main                      tests/negative/typed_assign_local_test.toit:8:9
  1: __entry__.<lambda>        <sdk>/core/entry.toit:48:20
